@@ -27,9 +27,13 @@
  */
 
 // Pull these variables out to allow shorthand (easier for lazy programmers)
-$limit = $GLOBALS['user']->prefs['offset_limit'] ? $GLOBALS['user']->prefs['offset_limit'] : '25'; 
-$start = Browse::$start; 
-$total = Browse::$total_objects; 
+$limit	= $GLOBALS['user']->prefs['offset_limit'] ? $GLOBALS['user']->prefs['offset_limit'] : '25'; 
+$start	= Browse::$start; 
+$total	= Browse::$total_objects; 
+$uid	= Config::get('list_header_uid'); 
+
+// ++ the uid
+Config::set('list_header_uid',$uid+1); 
 
 // Next
 $next_offset = $start + $limit;
@@ -59,7 +63,7 @@ $page = $current_page;
 $i = 0;
 /* While we have pages left */
 while ($page > 0) { 
-	if ($i == '15') { $page_data['down'][1] = '...'; $page_data['down'][0] = '0'; break; } 
+	if ($i == '10') { $page_data['down'][1] = '...'; $page_data['down'][0] = '0'; break; } 
 	$i++;
 	$page = $page - 1;
 	$page_data['down'][$page] = $page * $limit;
@@ -71,7 +75,7 @@ $i = 0;
 /* While we have pages left */
 while ($page <= $pages) { 
 	if ($page * $limit > $total) { break; }
-	if ($i == '15') { 
+	if ($i == '10') { 
 		$key = $pages - 1;
 		if (!$page_data['up'][$key]) { $page_data['up'][$key] = '...'; }
 		$page_data['up'][$pages] = ($pages-1) * $limit;
@@ -86,26 +90,13 @@ while ($page <= $pages) {
 ksort($page_data['up']);
 ksort($page_data['down']);
 
-/* Detect the current script, this take a little work because we have to 
- * account for FastCGI 
- */
-preg_match("/.*\/(.+\.php)$/", $_SERVER['SCRIPT_NAME'], $matches);
-// Must be running Fast CGI or something similar
-if (!isset($matches['1'])) { 
-	// Try PHP_SELF
-	preg_match("/.*\/(.+\.php)$/",$_SERVER['PHP_SELF'],$matches); 
-}
-
-$action = "action=" . scrub_in($_REQUEST['action']);
-$script = Config::get('web_path') . "/" . $admin_menu . $matches[1];
-
 // are there enough items to even need this view?
 if ($pages > 1) {
 ?>
 <table class="list-header" cellpadding="1" cellspacing="0" width="100%">
 <tr>
 	<td valign="top">
-	<?php echo Ajax::text('?action=page&start=' . $prev_offset,'[' . _('Prev') . ']','browse_prev','','list-header'); ?>
+	<?php echo Ajax::text('?action=page&start=' . $prev_offset,_('Prev'),'browse_' . $uid . 'prev','','list-header'); ?>
 	</td>
 	<td align="center">
 	<?php 
@@ -115,27 +106,27 @@ if ($pages > 1) {
 			else { 
 			// Hack Alert
 			$page++;
-				echo Ajax::text('?action=page&start=' . $offset,$page,'browse_page_' . $page,'','list-header'); 
+				echo Ajax::text('?action=page&start=' . $offset,$page,'browse_' . $uid . 'page_' . $page,'','list-header'); 
 			}
 		} // end foreach down
 
 		/* Echo Out current Page */
 		$current_page = $current_page +1;
 	?>
-	<span class="list-header"><strong><?php echo $current_page; ?></strong></span>&nbsp;
+	<span class="list-header-selected"><?php echo $current_page; ?></span>
 	<?php
 		
 		/* Echo Out Everything Above Us */
 		foreach ($page_data['up'] as $page=>$offset) { 
 			if ($offset === '...') { echo '...&nbsp;'; } 
 			else { 
-				echo Ajax::text('?action=page&start=' . $offset,$page,'browse_page_' . $page,'','list-header'); 
+				echo Ajax::text('?action=page&start=' . $offset,$page,'browse_' . $uid . 'page_' . $page,'','list-header'); 
 			} // end else
 		} // end foreach up
 	?>
 	</td>
 	<td valign="top">
-		<?php echo Ajax::text('?action=page&start=' . $next_offset,'[' . _('Next') . ']','browse_next','','list-header'); ?>
+		<?php echo Ajax::text('?action=page&start=' . $next_offset,_('Next'),'browse_' . $uid . 'next','','list-header'); ?>
 	</td>
 </tr>
 </table>
