@@ -504,12 +504,28 @@ span.five-stars:hover { width: 80px; }
 /*             List Header Styles               */
 /************************************************/
 .list-header { 
-	text-decoration: none;
-	cursor:pointer; 
+	background:#ffffff;
 } 
-.list-header:hover { 
-	color:#071fd4;
+table.list-header { 
+	margin:3px;
+} 
+span.list-header { 
+	cursor:pointer; 
+	text-decoration: none;
+	font-size: 0.8em; 
+	padding:0px 4px 0px 4px;
+	border: 1px solid #000; 
+} 
+span.list-header-selected {
+        text-decoration: none;
+        font-size: 0.8em;
+        padding:0px 4px 0px 4px;
+        border: 1px solid #000;
+	background: #e0e0e0; 
 }
+span.list-header:hover { 
+	background: #d0d0d0; 
+} 
 
 
 /************************************************/
